<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/background"
        android:background="@drawable/circular_image"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/drawer_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_username"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/drawer_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawer_email"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/friends_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/friends_count"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/pending_request_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pending_request_count"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="2"/>
    </LinearLayout>

</LinearLayout>